Fixed up lots of layout bugs

--- a/css/layout.css
+++ b/css/layout.css
@@ -38,13 +38,12 @@ body {
 	bottom: 0px;
 	left: 0px;
 	margin-top: 1em;
+	width: 100%;
 }
 
 #highlights {
 	text-align: center;
 	vertical-align: center;
-	margin-top: 1em;
-	margin-bottom: 1em;
 	height: 200px;
 }
 
@@ -124,6 +123,11 @@ body {
 	display: inline-block;
 	width: 19%;
 	vertical-align: bottom;
+}
+
+.columnHeader {
+	font-family: ubuntu;
+	font-size: 18pt;	
 }
 
 .columnTitle {
